--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https:/fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin);@charset "UTF-8";
 
 /*
  * # Semantic UI - 2.2.10
